--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A stream control and utility library for modern node.js (>v4)",
   "main": "dist/src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers ts:ts-node/register --recursive ./test/spec/**/*Test.ts"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,16 @@
     "pump"
   ],
   "author": "Seth Miller <seth@four43.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.18"
+  },
+  "devDependencies": {
+    "@types/sinon": "^2.2.2",
+    "mocha": "^3.4.1",
+    "sinon": "^2.2.0",
+    "ts-node": "^3.0.4",
+    "typescript": "^2.3.2"
+  }
 }
