--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "dike",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "A stream control and utility library for modern node.js (>v4)",
-  "main": "dist/src/main.js",
+  "main": "dist/src/main",
+  "typings": "dist/src/main",
   "scripts": {
     "build": "rm -rf ./dist; tsc --pretty",
     "test": "mocha --compilers ts:ts-node/register --recursive ./test/spec/**/*Test.ts"
