--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dike",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "A stream control and utility library for modern node.js (>v4)",
   "main": "dist/src/main",
   "typings": "dist/src/main",
   "scripts": {
     "build": "rm -rf ./dist; tsc --pretty",
-    "test": "mocha --compilers ts:ts-node/register --recursive ./test/spec/**/*Test.ts"
+    "test": "mocha --compilers ts:ts-node/register --recursive ./test/spec/**/*Test.ts",
+    "prepublishOnly": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
